make inputs step 1

--- a/options.config
+++ b/options.config
@@ -7,7 +7,7 @@ PROJECT_ID=project-GbfkqPQJgp3f3yZ26F3GG536
 #
 # Set to the directory in your RAP project 
 #
-PROJECT_DIR=/LF
+PROJECT_DIR=/WES/test
 
 # 
 # Set to your latest RAP dataset from which phenotype data will be extracted:
@@ -18,9 +18,9 @@ DATASET=/app43027_20231210173935.dataset
 #
 # Association testing options
 #
-PHENO=UKB_LF_pheno_AMR.txt
-COVAR=UKB_LF_covar_AMR.txt
-COVAR_COL_LIST="PC{1:10}"
-CAT_COVAR_LIST=array
-TRAIT=qt
-RESULTS=/LF/AMR
+pheno=UKB_LF_pheno_AMR.txt
+covar=UKB_LF_covar_AMR.txt
+covarColList="PC{1:10}"
+catCovarList=array
+bt=qt
+ANALYSIS=UKB_AMR
