Regenie step2 SV

--- a/RAP.config
+++ b/RAP.config
@@ -13,6 +13,7 @@ WOMTOOL_URL=https://github.com/broadinstitute/cromwell/releases/download/85/womt
 WOMTOOL=`basename $WOMTOOL_URL`
 
 GENO_BASE="/Bulk/Genotype Results/Genotype calls/ukb22418_c*"
+EXOME_PATH="/Bulk/Exome sequences/Population level exome OQFE variants, PLINK format - final release"
+EXCLUDE=${EXOME_PATH}/helper_files/ukb23158_500k_OQFE.90pct10dp_qc_variants.txt
 
-WDL="regenie_step1.wdl  regenie_step2.wdl"
-INPUTS_STEP1=inputs_regenie_step1.json
+WDL="regenie_step1.wdl  regenie_step2_SV.wdl"
