--- a/options.config
+++ b/options.config
@@ -23,4 +23,6 @@ covar=UKB_LF_covar_AMR.txt
 covarColList="PC{1:10}"
 catCovarList=array
 bt=qt
+models=additive
 ANALYSIS=UKB_AMR
+RESULTS=/WES/test/AMR
