--- a/RAP.config
+++ b/RAP.config
@@ -14,6 +14,16 @@ WOMTOOL=`basename $WOMTOOL_URL`
 
 GENO_BASE="/Bulk/Genotype Results/Genotype calls/ukb22418_c*"
 EXOME_PATH="/Bulk/Exome sequences/Population level exome OQFE variants, PLINK format - final release"
-EXCLUDE=${EXOME_PATH}/helper_files/ukb23158_500k_OQFE.90pct10dp_qc_variants.txt
+exclude=${EXOME_PATH}/helper_files/ukb23158_500k_OQFE.90pct10dp_qc_variants.txt
+annot=${EXOME_PATH}/helper_files/ukb23158_500k_OQFE.annotations.txt.gz
+setlist=${EXOME_PATH}/helper_files/ukb23158_500k_OQFE.sets.txt.gz
 
-WDL="regenie_step1.wdl  regenie_step2_SV.wdl"
+WDL="regenie_step1.wdl  regenie_step2_SV.wdl regenie_step2_collapsing.wdl"
+
+STEP2_FILE_OPTIONS="pheno covar exclude"
+COLLAPSING_FILE_OPTIONS="$STEP2_FILE_OPTIONS annot setlist"
+STEP2_UPLOAD_OPTIONS="extract"
+COLLAPSING_UPLOAD_OPTIONS="mask"
+STRING_OPTIONS="covarColList catCovarList output_prefix"
+COLLAPSING_STRING_OPTIONS="$STRING_OPTIONS joint_tests tests"
+export $STEP2_FILE_OPTIONS $COLLAPSING_FILE_OPTIONS $STEP2_UPLOAD_OPTIONS $COLLAPSING_UPLOAD_OPTIONS $STRING_OPTIONS $COLLAPSING_STRING_OPTIONS
