--- a/options.config
+++ b/options.config
@@ -5,7 +5,7 @@
 PROJECT_ID=project-GbfkqPQJgp3f3yZ26F3GG536
 
 #
-# Set to the directory in your RAP project 
+# Set to the directory in your RAP project you want to install the pipeline
 #
 PROJECT_DIR=/WES/test
 
@@ -22,7 +22,24 @@ pheno=UKB_LF_pheno_AMR.txt
 covar=UKB_LF_covar_AMR.txt
 covarColList="PC{1:10}"
 catCovarList=array
-bt=qt
-models=additive
-ANALYSIS=UKB_AMR
+
+# Set to false for quantitative traits, true for binary traits
+bt=false
+
+# Select from additive, dominant and recessive e.g. "additive recessive"
+models="additive"
+
+# Specify a list of SNPs to run association testing on
+#extract=snps.keep
+
+# Specify a subset of chromosomes to run collapsing tests on
+#chroms="21 22"
+
+# Collapsing mask to use
+mask=backmask.def
+
+# Prefix for results files
+output_prefix=UKB_AMR
+
+# Output directory for results
 RESULTS=/WES/test/AMR
