Working with single phenotypes

--- a/options.config
+++ b/options.config
@@ -18,7 +18,7 @@ DATASET=/app43027_20231210173935.dataset
 #
 # Association testing options
 #
-pheno=UKB_LF_pheno_AMR.txt
+pheno=UKB_LF_FEV1_AMR.txt
 covar=UKB_LF_covar_AMR.txt
 covarColList="PC{1:10}"
 catCovarList=array
